2011-1-21   Daniel Lee  <bearlee@alum.mit.edu>
* DESCRIPITION: Changed numbering from major.minor to major.minor.maintence so we can track incremental changes.

2011-1-18   Daniel Lee  <bearlee@alum.mit.edu>
* discrete.histogram.R: Added third probability vector. Changed location of bars to remove overlap.