@@ -1,0 +1,19 @@
+049aaefe7f80e7ca95be0eebfb4bb149 *ChangeLog
+8f90990933804270b304f12ba638b1b9 *DESCRIPTION
+550d09cb17bd4630a8d2cdb7d067f106 *NAMESPACE
+9b55b8fa2f6fff455ce9154f77c5fbf1 *R/coefplot.R
+1df6f0867f70c2b627bfb7c8ace9640a *R/constants.R
+a5b68ad1b3ac99f2cd737e2e640fe78c *R/discrete.histogram.R
+ed92245aae755b80c955b25afec2707e *R/display.R
+5901491afc65b8ec378dfc46ed442aca *R/dotplot.R
+241ff4d82b68765f3e31c5e7847a24bc *R/fround.R
+17ecdfe60ee98cd80117f1fc17d95628 *R/read.columns.R
+1414979cb2a50841fed1aef077da1b01 *R/spinner.R
+c13f257fe34e065bd414b14552e71b5b *man/coefplot.Rd
+955f134c74deed7d2daf63b35cc49cb4 *man/constants.Rd
+45770b0ac319678c3fc4d6b9ea112570 *man/discrete.histogram.Rd
+e4e9144dc4855f6883484e5dd5f90fa2 *man/display.Rd
+03d8ac5e717015864fdff20e5cbe9760 *man/dotplot.Rd
+41ba2a52c367db263973bed280eb945f *man/fround.Rd
+32f846a7bda766234bf557898a47622d *man/read.columns.Rd
+050340ca7b3904c88f7f229f5028d175 *man/spinner.Rd
