@@ -1,3 +1,6 @@
+2011-1-24   Daniel Lee  <bearlee@alum.mit.edu>  1.0.2
+* discrete.histogram.R: fixed a bug in the offset code. Made the incorrect assumption that a NULL / sum (NULL) would be NULL.
+
 2011-1-21   Daniel Lee  <bearlee@alum.mit.edu>
 * DESCRIPITION: Changed numbering from major.minor to major.minor.maintence so we can track incremental changes.
 
